--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "langdetect": "^0.2.1",
     "openai": "^4.47.1"
   },
   "devDependencies": {
